[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[lib]
name = "rusted_advent_of_code"
path = "rusted-advent-of-code/raoc.rs"

[[bin]]
name = "problems"
path = "problems/main.rs"